# python-keycloak-oauth

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  publickey.crt  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
keycloak/: oauth.py  starlette_admin.py
keycloak_oauth/: __init__.py  starlette_admin.py
tests/: keycloak_testcontainer.py  test_oauth.py  test_oauth_client_secret.py  test_oauth_signed_jwt.py
tests/resources/keycloak/: keypair.pem  realm-export.json  realm.json  realm_signed_jwt.json
